Add support for MSSQL
Signed-off-by: Rene Jochum <rene@jochums.at>

--- a/albiondata-sql.yaml.tmpl
+++ b/albiondata-sql.yaml.tmpl
@@ -1,4 +1,4 @@
-# One of "mysql", "postgresql" or "sqlite3"
+# One of "mssql", "mysql", "postgresql" or "sqlite3"
 dbType: mysql
 # See: http://jinzhu.me/gorm/database.html#connecting-to-a-database
 dbURI: 
